--- a/src/assets/stylesheets/globals/sidebar.scss
+++ b/src/assets/stylesheets/globals/sidebar.scss
@@ -126,8 +126,8 @@ html {
     padding: 2px 0px 2px 10px;
     position: fixed;
     width: 100%;
-    z-index: 1001;
-    
+    z-index: 6;
+    display: inline-table;
   }
   .navbar + div {
     padding-top: 44px;
